<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp10"
        android:gravity="center"
        android:text="@string/weather_info_title"
        android:textColor="@color/white"
        android:textSize="@dimen/sp20"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/setting"
        android:contentDescription="@string/content_desc_search_setting"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp40"
        android:layout_margin="@dimen/dp20"
        android:src="@drawable/baseline_settings_white_24"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/et_city"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp40"
        android:layout_margin="@dimen/dp20"
        android:layout_marginStart="@dimen/dp5"
        android:background="@drawable/rounded_background"
        app:drawableStartCompat="@drawable/baseline_search_black_24"
        android:hint="@string/search_city_hint"
        android:inputType="text"
        android:maxLines="1"
        android:paddingStart="@dimen/dp5"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="@dimen/sp12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/setting"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <com.quypham.vdc.customview.StateRecyclerView
        android:id="@+id/rv_weathers"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/dp10"
        app:errorIcon="@drawable/baseline_error_outline_white_48"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_city"
        tools:listitem="@layout/item_weather" />

</androidx.constraintlayout.widget.ConstraintLayout>